k8s/config/namespace.yaml
# Definición de Namespaces para la arquitectura de microservicios
# Basado en la documentación oficial de Kubernetes:
# https://v1-32.docs.kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/
# https://v1-32.docs.kubernetes.io/docs/tasks/administer-cluster/namespaces/

# Los namespaces proporcionan un mecanismo para aislar grupos de recursos dentro de un mismo clúster.
# Son especialmente útiles cuando múltiples usuarios o equipos utilizan el mismo clúster Kubernetes.

apiVersion: v1
kind: Namespace
metadata:
  name: event-management
  labels:
    name: data-services
    part-of: microservices-platform
    environment: development

---

apiVersion: v1
kind: Namespace
metadata:
  name: devops-tools
  labels:
    name: devops-tools
    part-of: microservices-platform
    environment: development

---

apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    part-of: microservices-platform
    environment: development

---

apiVersion: v1
kind: Namespace
metadata:
  name: security
  labels:
    name: security
    part-of: microservices-platform
    environment: development

---

apiVersion: v1
kind: Namespace
metadata:
  name: microservices
  labels:
    name: microservices
    part-of: microservices-platform
    environment: development

---

apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    name: cert-manager
    part-of: microservices-platform
    environment: development

---

apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  labels:
    name: ingress
    part-of: microservices-platform
    environment: development


---

apiVersion: v1
kind: Namespace
metadata:
  name: nfs-provisioner
  labels:
    name: nfs-provisioner
    part-of: microservices-platform
    environment: development
